--- a/pom.xml
+++ b/pom.xml
@@ -430,6 +430,14 @@
                                 <format>html</format>
                                 <format>xml</format>
                             </formats>
+                            <executions>
+                                <execution>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>cobertura</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
                         </configuration>
                     </plugin>
                     <plugin>
